# rental_hardware

./: README.md  docker-compose.yml  gpu_renting_frontend.jsx  nginx.conf  pyproject.toml
app/: __init__.py  main.py
app/api/: routes_admin.py  routes_jobs.py
app/core/: auth.py  config.py  db.py  models.py  schemas.py
app/gpu/: __init__.py  nvml_monitor.py
app/scheduler/: admission.py
app/services/: __init__.py  llama_gateway.py  session_control.py
app/supervisor/: __init__.py  process_manager.py  windows_jobs.py
app/workers/: __init__.py  dummy_worker.py
gpu_rental_microservice/: README.md  requirements.txt  seed_demo.py
gpu_rental_microservice/app/: config.py  db.py  deps.py  job_queue.py  limiting.py  main.py  metering.py  models.py  redis_control.py  runner.py  security.py  worker.py
gpu_rental_microservice/app/routers/: admin.py
poc_gpu_service/: .env.example  README.md  requirements.txt
poc_gpu_service/apps/bastion_control_plane/: main.py
poc_gpu_service/apps/gpu_agent/: main.py
poc_gpu_service/apps/gpu_agent/api/: routes.py
poc_gpu_service/catalog/: models.json
poc_gpu_service/scripts/: collect_gpu_metrics.py  ensure_model.py  inventory_models.py  release_gpu0_capacity.py  restore_gpu0_state.py  smoke_test.ps1  snapshot_gpu0_state.py  start_all.ps1  start_backend.py  stop_backend.py
poc_gpu_service/shared/: config.py  logging.py  security.py
poc_gpu_service/shared/utils/: catalog.py  request_id.py
tests/: test_admin_endpoints.py  test_admission.py  test_api_smoke.py  test_quota_and_session.py  test_services_analytics.py
(+31 files in other folders)
